Migrate ActionRegistryTest
Use JUnit5 to drive this test.

Change-Id: Id4c0c727eb1d99a924783018893958c1d8313e1d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>